hard-gists/a5b640e4368204426310/run.log
=== Docker Run Log for a5b640e4368204426310 ===
Started at: Mi 29. Okt 18:58:11 CET 2025

[2025-10-29 18:58:11] START: Running container for a5b640e4368204426310
[2025-10-29 18:58:12] SUCCESS: Container bae48db04145c0ed78312e3b0a00b33479099ce3a0afa06504b8933622785c1d started for a5b640e4368204426310
=== Container logs for a5b640e4368204426310 ===
  File "/snippet.py", line 38
    print p['title']
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a5b640e4368204426310 ===
[2025-10-29 18:58:14] INFO: Container bae48db04145c0ed78312e3b0a00b33479099ce3a0afa06504b8933622785c1d has stopped
